# project-templates

./: README.md
ai/: .aider.conf.yml  .aider.gemini-3-flash.yml  .aider.gemini-3.1-pro.yml  .aider.glm-5.yml  .aider.minimax-m2.5.yml  .aider.model.settings.yml  .env
bash/: .shellcheckrc
docs/: .markdownlint.json  .yamllint.yml
general/: .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .sqlfluff
gitlab/: .gitlab-ci.yml
gitlab/ci/: security.yml  test.yml  validate.yml
go/: .golangci.yml
java/: pom.xml
js/: .eslintignore  .eslintrc.json  .prettierrc  .prettierrc.json  .stylelintignore  .stylelintrc.json  eslint.config.mjs  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
php/: .php-cs-fixer.php  AGENTS.md  collision-detector.json  composer.json  phpstan.neon  phpstan.neon.dist  phpunit.xml.dist  rector.php
python/: .pre-commit-config.yaml  pyproject.toml
symfony/: .twig-cs-fixer.dist.php
